//声明proto的版本 只能 是3，才支持 gRPC
syntax = "proto3";
//package 声明 包名 golang对包名比较严格 所以这里需要指定一下
package helloworld;

// service 定义一个服务
service Hello {
    // rpc 定义一个rpc调用方法
    rpc SayHello (HelloReq) returns (HelloRep) {
    }
}

//  message 类似于struct
// request
message HelloReq {
    string name = 1;
}

//  response
message HelloRep {
    string message = 1;
}
